desktop version almost ready

--- a/public/index.html
+++ b/public/index.html
@@ -53,7 +53,8 @@
     <section class="main-initial">
       <div class="img-hero"></div>
       <div class="wrapper">
-        <h1 class="wrapper">More than just shorter links</h1>
+        <!-- <h1 class="wrapper">More than just shorter links</h1> -->
+        <h1>More than just shorter links</h1>
         <p class="main-paraph">
           Build your brand’s recognition and get detailed insights
           on how your links are performing.
