--- a/public/index.html
+++ b/public/index.html
@@ -65,7 +65,8 @@
 
     <section class="main-section-gray">
       <form class="shortener-form wrapper">
-        <input id="long-url" type="text" placeholder="Shorten a link here...">
+        <input id="long-url" type="text" placeholder="Shorten a link here..." required>
+        <!-- Error above -->
         <input id="btn-url" type="submit" value="Shorten It!">
       </form>
       <!-- Shorterned link above-->
