--- a/public/index.html
+++ b/public/index.html
@@ -69,7 +69,9 @@
         <!-- Error above -->
         <input id="btn-url" type="submit" value="Shorten It!">
       </form>
-      <!-- Shorterned link above-->
+      <section id="painted-links">
+        <!-- Shorterned links here-->
+      </section>
       <div class="wrapper">
         <h2>Advanced Statistics</h2>
         <p class="main-paraph">Track how your links are performing across the web with our
