--- a/public/index.html
+++ b/public/index.html
@@ -72,6 +72,9 @@
       <section id="painted-links">
         <!-- Shorterned links here-->
       </section>
+      <dialog>
+        <img src="./assets/images/circles.svg" alt="loader">
+      </dialog>
       <div class="wrapper">
         <h2>Advanced Statistics</h2>
         <p class="main-paraph">Track how your links are performing across the web with our
@@ -182,6 +185,7 @@
       <div class="link-shorterned">
         <p></p>
         <button class="btn-copy">Copy</button>
+        <button class="btn-delete">Delete</button>
       </div>
     </div>
   </template>
